--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,15 @@
 
 * {
   box-sizing: border-box;
+  max-width: 100vw;
 }
 
 html {
   font-family: "Roboto Mono", monospace;
-  overflow-x: hidden;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 body {
-  background-color: #f0ead6;
+  max-width: 100vw;
   overflow-x: hidden;
 }
